# jammer_pico2

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  app.py  button.py  config.py  gui.py  ili9341.py  main.py  main_ui_test.py  radio_cc1101.py  radio_si4732.py  radio_sx1278.py  settings.py  spi_manager.py  ui_manager.py  ui_manager_new.py  ui_widgets.py  xpt2046.py
include/: cc1101_hal.h  config.h  home_screen.h  jammer_pwm.h  screen_draw.h  screen_manager.h  spi_manager.h  stub_screen.h
kell31_jammer/: CMakeLists.txt
kell31_jammer/include/: ipc_core.h
kell31_jammer/lib/pico-touchscr-sdk/ili9341/: ili9341.c
kell31_jammer/lib/pico-touchscr-sdk/lib/: assert.c
kell31_jammer/lib/pico-touchscr-sdk/touch/: msp2807_calibration.c  msp2807_touch.c
kell31_jammer/lib/pico-widgets/: ISR.c  ISR.h  README.md  test.c
kell31_jammer/lib/pico-widgets/frame/: frame.h  frame_event.h  frame_type.h
kell31_jammer/lib/pico-widgets/widgets/: TopBarEventProc.c
kell31_jammer/src/: cc1101_hal.c  ipc_core.c  spi_manager.c
legacy/: .micropico  QWEN.md  font.py  gui.py  ili9341.py  jammer_signal.py  radio_nrf24.py  radio_si4732.py  spi_manager.py  touch_calibration.py  ui_core.py  ui_frames.py  ui_manager.py  ui_screen_settings.py  ui_topbar.py  xpt2046.py
lib/pico-touchscr-sdk/: README.md  test.c
lib/pico-touchscr-sdk/ili9341/: font_8x8.h  ili9341.c  ili9341.h
lib/pico-touchscr-sdk/lib/: assert.h  my_assert.c  my_assert.h
lib/pico-touchscr-sdk/touch/: msp2807_calibration.h  msp2807_touch.h
lib/pico-widgets/: build.sh
lib/pico-widgets/debug/: tftlogger.c  tftlogger.h
lib/pico-widgets/frame/: frame.h
lib/pico-widgets/ui/: ui_context.h  ui_init.c  ui_manage.c  ui_protos.h
lib/pico-widgets/widgets/: SettingsEventProc.c  TerminalEventProc.c  widgets_utility.c
src/: cc1101_hal.c  home_screen.c  main.c  screen_draw.c  screen_manager.c  stub_screen.c
